# ml-training-vertex

./: README.md  data-science-workflow-top-2-with-tuning.ipynb  final-complete-gcp-training.ipynb  final-complete-local-training.ipynb  full-local-pipeline.py  pyproject.toml
ml/: Dockerfile
ml/trainer/: launch.md  task.py
